
____________________________________________________________________________________________


LATEXSTY CHANGELOG

____________________________________________________________________________________________


2019 APR 21c
   * in LICENSE
     - changed the years 


2019 APR 21b
   * in gitnewversion.sh
     - made check for git executable installed on system
     - added Y/N query on whether to push changes to server
     - added call to gitnewversion_public.sh


2019 APR 21a
   * added README
   * added LICENSE
   * added gitnewversion_public.sh
   * added removeproprietary.sh


2018 JUL 30a
   * in all .cls files
     - added \RequirePackage{amsmath} just before calling the fonts (needed to prevent
       errors with newer LaTeX and amsmath versions)
