@@ -2,9 +2,15 @@
 ____________________________________________________________________________________________
 
 
-LATEXSTY CHANGELOG
+TEXSTYLE CHANGELOG
 
 ____________________________________________________________________________________________
+
+
+2019 APR 22a
+   * renamed
+     - LATEXSTY -> TEXSTYLE
+     - latexsty -> texstyle
 
 
 2019 APR 21c
